# tockloader-rs

./: Cargo.toml  Makefile  README.md  test
.github/workflows/: rust.yml
src/: channels.rs  cli.rs  errors.rs  interfaces.rs  main.rs  serial_interface.rs
src/bootloader/: attribute.rs  codes.rs  mod.rs
src/channels/: traits.rs
src/channels/jlink/: board_interface.rs
src/channels/openocd/: board_interface.rs
src/channels/serial/: board_interface.rs
src/interfaces/: board_interface.rs  jlink.rs  openocd.rs  serial.rs  traits.rs
src/interfaces/jlink/: board_interface.rs  bootloader_interface.rs  bytes_reader.rs  virtual_terminal.rs
src/interfaces/openocd/: board_interface.rs  bootloader_interface.rs  bytes_reader.rs  virtual_terminal.rs
src/interfaces/serial/: binary_codec.rs  board_interface.rs  bootloader_interface.rs  bytes_reader.rs  virtual_terminal.rs
tbf-parser/: Cargo.toml
tbf-parser/src/: lib.rs  parse.rs  types.rs
tbf-parser/tests/: parse.rs
tbf-parser/tests/flashes/: RSA4096.key  RSA4096.sig
tockloader/: Cargo.toml
tools/: run_clippy.sh  run_fmt_check.sh
