[package]
name = "tockloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.1", features = ["cargo"] }
futures = "0.3.28"
tokio = { version ="1.28.0", features= ["full"] }
tokio-serial = "5.4.4"
tokio-util = {version = "0.7.8", features = ["full"] }
